chore: switch to orval for API generation with mock support

--- a/package.json
+++ b/package.json
@@ -3,17 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "codegen": "openapi-rq -i ./api-spec/flexible-leaves-api.yml -o src/api/generated/flexible-leaves-api",
+    "codegen": "npx orval",
     "test": "jest --watch",
     "test:ci": "jest --ci --coverage",
-    "predev": "npm run init-database",
     "dev": "next dev",
     "build": "next build",
     "start": "docker-compose up --build",
     "lint": "next lint",
-    "preprisma:dev": "npm run init-database",
-    "prisma:dev": "dotenv -e .env.local -- npx prisma migrate dev",
-    "init-database": "docker-compose -f .devcontainer/docker-compose.yml down -v && docker-compose -f .devcontainer/docker-compose.yml pull && docker-compose -f .devcontainer/docker-compose.yml up --detach --remove-orphans",
     "prepare": "npx husky"
   },
   "dependencies": {
@@ -31,7 +27,9 @@
     "@stripe/stripe-js": "^1.46.0",
     "@supabase/supabase-js": "^2.42.3",
     "@tabler/icons-react": "^3.2.0",
+    "@tanstack/react-query": "^5.80.6",
     "ajv": "^8.17.1",
+    "axios": "^1.9.0",
     "better-sqlite3": "^11.3.0",
     "check-password-strength": "^2.0.10",
     "classnames": "^2.5.1",
@@ -52,6 +50,7 @@
     "@7nohe/openapi-react-query-codegen": "^1.6.2",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@faker-js/faker": "^9.8.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.5.2",
@@ -70,6 +69,7 @@
     "jsdom": "^24.0.0",
     "msw": "^2.4.10",
     "next-router-mock": "^0.9.13",
+    "orval": "^7.9.0",
     "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.14.4",
     "postcss-simple-vars": "^7.0.1",
