--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^2.29.3",
     "lucia": "^3.2.1",
-    "next": "^15.2.1",
+    "next": "^15.3.3",
+    "next-intl": "^4.1.0",
     "prisma": "^5.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -57,6 +58,7 @@
     "@types/better-sqlite3": "^7.6.11",
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
