--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "codegen": "npx orval",
+    "codegen": "openapi-ts",
     "test": "jest --watch",
     "test:ci": "jest --ci --coverage",
     "dev": "next dev",
@@ -16,6 +16,8 @@
     "@edge-csrf/nextjs": "^2.5.3-cloudflare-rc1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hey-api/client-fetch": "^0.13.0",
+    "@hey-api/openapi-ts": "^0.72.0",
     "@lucia-auth/adapter-sqlite": "^3.0.2",
     "@mantine/core": "^7.16.3",
     "@mantine/dropzone": "^7.16.3",
@@ -48,10 +50,10 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
-    "@7nohe/openapi-react-query-codegen": "^1.6.2",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@faker-js/faker": "^9.8.0",
+    "@tanstack/react-query-devtools": "^5.80.6",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.5.2",
@@ -63,6 +65,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-test-renderer": "^18.3.0",
+    "cookie": "^1.0.2",
     "dotenv-cli": "^7.4.1",
     "jest": "^29.7.0",
     "jest-fixed-jsdom": "^0.0.2",
@@ -71,10 +74,10 @@
     "jsdom": "^24.0.0",
     "msw": "^2.4.10",
     "next-router-mock": "^0.9.13",
-    "orval": "^7.9.0",
     "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.14.4",
     "postcss-simple-vars": "^7.0.1",
+    "prettier": "^3.5.3",
     "react-test-renderer": "^18.3.1",
     "sharp": "^0.33.3",
     "typescript": "^5.4.5"
