--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@hey-api/client-fetch": "^0.13.0",
     "@hey-api/openapi-ts": "^0.72.0",
     "@lucia-auth/adapter-sqlite": "^3.0.2",
-    "@mantine/core": "^7.16.3",
-    "@mantine/dropzone": "^7.16.3",
-    "@mantine/form": "^7.16.3",
-    "@mantine/hooks": "^7.16.3",
+    "@mantine/core": "^8.1.0",
+    "@mantine/form": "^8.1.0",
+    "@mantine/hooks": "^8.1.0",
+    "@mantine/notifications": "^8.1.0",
     "@mui/icons-material": "^5.8.4",
     "@prisma/client": "^5.12.1",
     "@stripe/react-stripe-js": "^1.16.0",
@@ -47,6 +47,7 @@
     "react-icons": "^4.12.0",
     "react-scroll-wheel-handler": "^2.2.0",
     "react-toastify": "^10.0.6",
+    "react-world-flags": "^1.6.0",
     "swr": "^2.2.5"
   },
   "devDependencies": {
@@ -65,6 +66,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-test-renderer": "^18.3.0",
+    "@types/react-world-flags": "^1.6.0",
     "cookie": "^1.0.2",
     "dotenv-cli": "^7.4.1",
     "jest": "^29.7.0",
