test: fix signup form tests

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "codegen": "openapi-ts",
     "test": "jest --watch",
+    "coverage": "jest --coverage && node -e \"console.log('📄 Coverage report: file:///' + require('path').resolve('coverage/lcov-report/index.html'))\"",
     "test:ci": "jest --ci --coverage",
     "dev": "next dev",
     "build": "next build",
@@ -55,9 +56,9 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@faker-js/faker": "^9.8.0",
     "@tanstack/react-query-devtools": "^5.80.6",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/better-sqlite3": "^7.6.11",
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.12",
