feat: integrate openapi contract message format

--- a/api-spec/flexible-leaves-api.yml
+++ b/api-spec/flexible-leaves-api.yml
@@ -8,25 +8,29 @@ servers:
 paths:
   /2fa/setup:
     post:
-      summary: Generates QR code and temporary secret for 2FA setup
+      summary: Initialize 2FA Setup
       description: >-
-        Initiates the 2FA setup process by generating a QR code and a temporary
-        secret for a TOTP app like Google Authenticator.
+        Generates a QR code and a temporary secret to start the two-factor
+        authentication setup process.
       security:
         - bearerAuth: []
       responses:
         '200':
-          description: 2FA setup information returned successfully
+          description: 2FA setup initialized with QR code and secret.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/TwoFASetupResponse'
         '401':
-          description: Unauthorized - missing or invalid token
+          description: Unauthorized - Missing or invalid authentication token.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
   /2fa/verify-setup:
     post:
-      summary: Verifies the 2FA setup code
-      description: Verifies the TOTP code to confirm 2FA setup with an authenticator app.
+      summary: Verify 2FA Setup Code
+      description: Verifies the TOTP code to confirm two-factor authentication setup.
       security:
         - bearerAuth: []
       requestBody:
@@ -37,32 +41,52 @@ paths:
               $ref: '#/components/schemas/Verify2FACodeRequest'
       responses:
         '200':
-          description: Verification successful, 2FA enabled
+          description: Two-factor authentication enabled successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
         '400':
-          description: Invalid code
+          description: Invalid two-factor authentication code.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
         '401':
-          description: Unauthorized
+          description: Unauthorized - Missing or invalid authentication token.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
   /2fa/disable:
     delete:
-      summary: Disables 2FA
-      description: >-
-        Disables two-factor authentication for the current user and deletes the
-        2FA secret from the database.
+      summary: Disable Two-Factor Authentication
+      description: Disables 2FA for the current user and removes the 2FA secret.
       security:
         - bearerAuth: []
       responses:
         '200':
-          description: 2FA disabled successfully
+          description: Two-factor authentication disabled successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
         '400':
-          description: Invalid request
+          description: Failed to disable two-factor authentication.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
         '401':
-          description: Unauthorized - missing or invalid token
+          description: Unauthorized - Missing or invalid authentication token.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
   /2fa/recover:
     post:
-      summary: Request email-based 2FA reset
-      description: >-
-        Requests a recovery process for users who are locked out due to losing
-        access to their 2FA device (phone).
+      summary: Request 2FA Recovery
+      description: Sends a recovery email to users who lost access to their 2FA device.
       requestBody:
         required: true
         content:
@@ -71,17 +95,27 @@ paths:
               $ref: '#/components/schemas/Recover2FARequest'
       responses:
         '200':
-          description: 2FA reset request sent successfully
+          description: Recovery email sent successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
         '400':
-          description: Invalid email or failed request
+          description: Invalid email or request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
         '404':
-          description: User not found
+          description: User not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
   /2fa/confirm-recover:
     post:
-      summary: Confirm 2FA reset
-      description: >-
-        Confirms the reset process for 2FA by verifying the token sent to the
-        user's email.
+      summary: Confirm 2FA Recovery
+      description: Confirms 2FA reset by verifying the recovery token sent via email.
       requestBody:
         required: true
         content:
@@ -90,11 +124,23 @@ paths:
               $ref: '#/components/schemas/ConfirmRecover2FARequest'
       responses:
         '200':
-          description: 2FA successfully disabled and reset
+          description: Two-factor authentication recovery confirmed.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
         '400':
-          description: Invalid token
+          description: Invalid or expired recovery token.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
         '401':
-          description: Unauthorized - missing or invalid token
+          description: Unauthorized - Missing or invalid authentication token.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
   /auth/signup:
     post:
       summary: User Signup
@@ -108,12 +154,24 @@ paths:
       responses:
         '200':
           description: User successfully registered.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: User created successfully.
+                    severity: success
         '500':
           description: Server error during signup.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Internal server error
+                    severity: error
   /auth/verify-signup:
     post:
       summary: Verify Signup Token
@@ -127,12 +185,44 @@ paths:
       responses:
         '200':
           description: Token verified and user activated.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Signup verified successfully.
+                    severity: success
         '400':
           description: Invalid or expired token.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Invalid or expired verification token.
+                    severity: error
         '404':
           description: User not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: User not found.
+                    severity: error
         '500':
           description: Server error during verification.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Internal server error
+                    severity: error
   /auth/login:
     post:
       summary: User Login
@@ -164,15 +254,31 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ValidationErrorItem'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Password must contain at least one uppercase letter
+                    severity: error
+        '401':
+          description: Incorrect email or password.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Incorrect email or password.
+                    severity: error
         '500':
           description: Server error during login.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Internal server error
+                    severity: error
   /auth/logout:
     post:
       summary: User Logout
@@ -185,7 +291,11 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Internal server error
+                    severity: error
   /auth/refresh:
     post:
       summary: Refresh Access Token
@@ -200,13 +310,21 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Invalid or missing refresh token.
+                    severity: error
         '500':
           description: Server error during token refresh.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Internal server error
+                    severity: error
   /auth/reset-password/request:
     post:
       summary: Initiate Password Reset
@@ -225,11 +343,11 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: Password reset not allowed
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Password reset not allowed.
+                    severity: warning
         '204':
           description: Password reset email sent if user exists and is active.
         '500':
@@ -237,7 +355,11 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Internal server error
+                    severity: error
   /auth/reset-password:
     post:
       summary: Complete Password Reset
@@ -256,17 +378,25 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Invalid or expired reset token, or invalid password.
+                    severity: error
         '500':
           description: Server error during password reset.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Internal server error
+                    severity: error
   /auth/accept-terms:
     post:
       summary: Accept Terms of Service
-      description: >-
+      description: >
         Marks the user's Terms of Service as accepted. Requires a valid session
         and refresh token. A new access token is issued with updated claims and
         sent via an HTTP-only cookie.
@@ -283,19 +413,31 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: 'Unauthorized: session missing or expired.'
+                    severity: error
         '403':
           description: Invalid or missing refresh token.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Invalid or missing refresh token.
+                    severity: error
         '500':
           description: Server error during terms acceptance or token generation.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Internal server error
+                    severity: error
   /auth/verify-2fa:
     post:
       summary: Verify Two-Factor Authentication Code
@@ -329,19 +471,31 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Invalid or expired two-factor authentication code.
+                    severity: error
         '401':
           description: Unauthorized - session missing or expired.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: 'Unauthorized: session missing or expired.'
+                    severity: error
         '500':
           description: Server error during 2FA verification.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Internal server error
+                    severity: error
   /csrf-token:
     get:
       summary: Get CSRF token
@@ -369,6 +523,32 @@ paths:
                 $ref: '#/components/schemas/CsrfTokenResponse'
 components:
   schemas:
+    Message:
+      type: object
+      properties:
+        text:
+          type: string
+          example: Operation completed successfully.
+        severity:
+          type: string
+          enum:
+            - error
+            - warning
+            - info
+            - success
+          example: success
+      required:
+        - text
+        - severity
+    ApiMessageResponse:
+      type: object
+      properties:
+        messages:
+          type: array
+          items:
+            $ref: '#/components/schemas/Message'
+      required:
+        - messages
     TwoFASetupResponse:
       type: object
       properties:
@@ -474,20 +654,6 @@ components:
         newPassword:
           type: string
           example: StrongNewPassword!2025
-    ErrorResponse:
-      type: object
-      properties:
-        message:
-          type: string
-          example: Internal server error
-        error:
-          type: string
-    ValidationErrorItem:
-      type: object
-      properties:
-        message:
-          type: string
-          example: Invalid email format
     User:
       type: object
       properties:
