feat: implement fetcher with access token refresh flow

--- a/api-spec/flexible-leaves-api.yml
+++ b/api-spec/flexible-leaves-api.yml
@@ -496,7 +496,45 @@ paths:
                 messages:
                   - text: Internal server error
                     severity: error
-  /csrf-token:
+  /auth/session:
+    get:
+      summary: Get current user session
+      description: >-
+        Returns the authenticated user's session information. Requires an active
+        session.
+      security:
+        - cookieAuth: []
+      responses:
+        '200':
+          description: Current user session retrieved successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  user:
+                    $ref: '#/components/schemas/User'
+        '401':
+          description: Unauthorized - session missing or expired.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: 'Unauthorized: session missing or expired.'
+                    severity: error
+        '500':
+          description: Server error retrieving session.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiMessageResponse'
+              example:
+                messages:
+                  - text: Internal server error
+                    severity: error
+  /csrf/token:
     get:
       summary: Get CSRF token
       tags:
