--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flexible-leaves-web",
+  "name": "nextjs-hybrid-auth",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,37 +19,25 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hey-api/client-fetch": "^0.13.0",
     "@hey-api/openapi-ts": "^0.72.0",
-    "@lucia-auth/adapter-sqlite": "^3.0.2",
     "@mantine/core": "^8.1.0",
     "@mantine/form": "^8.1.0",
     "@mantine/hooks": "^8.1.0",
     "@mantine/notifications": "^8.1.0",
     "@mui/icons-material": "^5.8.4",
-    "@prisma/client": "^5.12.1",
-    "@stripe/react-stripe-js": "^1.16.0",
-    "@stripe/stripe-js": "^1.46.0",
-    "@supabase/supabase-js": "^2.42.3",
     "@tabler/icons-react": "^3.2.0",
     "@tanstack/react-query": "^5.80.6",
-    "ajv": "^8.17.1",
     "axios": "^1.9.0",
-    "better-sqlite3": "^11.3.0",
     "check-password-strength": "^2.0.10",
     "classnames": "^2.5.1",
-    "crypto-js": "^4.2.0",
     "date-fns": "^2.29.3",
-    "lucia": "^3.2.1",
     "next": "^15.3.3",
     "next-intl": "^4.1.0",
-    "prisma": "^5.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.51.3",
     "react-icons": "^4.12.0",
     "react-scroll-wheel-handler": "^2.2.0",
     "react-toastify": "^10.0.6",
-    "react-world-flags": "^1.6.0",
-    "swr": "^2.2.5"
+    "react-world-flags": "^1.6.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
@@ -59,15 +47,11 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/better-sqlite3": "^7.6.11",
-    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.17",
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-world-flags": "^1.6.0",
-    "cookie": "^1.0.2",
     "dotenv-cli": "^7.4.1",
     "jest": "^29.7.0",
     "jest-fixed-jsdom": "^0.0.2",
