--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"build": "next build",
 		"start": "docker-compose up --build",
 		"lint": "next lint",
-		"prepare": "npx husky"
+		"prepare": "npx husky",
+		"generate:tokens": "style-dictionary build --config src/tokens/config.json"
 	},
 	"dependencies": {
 		"@edge-csrf/nextjs": "^2.5.3-cloudflare-rc1",
@@ -67,6 +68,7 @@
 		"prettier": "^3.6.2",
 		"semantic-release": "^24.2.7",
 		"sharp": "^0.33.3",
+		"style-dictionary": "^5.0.2",
 		"typescript": "^5.4.5"
 	},
 	"msw": {
