--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"start": "docker-compose up --build",
 		"lint": "next lint",
 		"prepare": "npx husky",
+		"start:backend-local": "docker-compose -f .devcontainer/docker-compose.prod.yml down -v && docker-compose -f .devcontainer/docker-compose.prod.yml up -d postgres redis smtp4dev && docker-compose -f .devcontainer/docker-compose.prod.yml run --rm migrate && docker-compose -f .devcontainer/docker-compose.prod.yml up --build -d --remove-orphans api",
 		"generate:tokens": "style-dictionary build --config src/tokens/config.json"
 	},
 	"dependencies": {
